# backend

./: LICENSE  alembic.ini  config.py  main.py  misc.py  pyproject.toml  test.py
app/db/: decorators.py  dsn.py  mixins.py  models.py
app/db/asyncpg_utils/: __init__.py  monkey_patch.py
app/db/crud/: base.py
app/db/migrations/: env.py
app/db/migrations/versions/: 042505663170_users_phone_unique.py  0a9157e6d4f9_remove_nullable_last_activity.py  45032991e05e_users_sessions_devices.py  4b5f79b1a4bf_rename_author_to_author_id.py  5509f4d52840_messages_documents.py  6e5d89f94a13_add_roles.py  798f93615ed2_fix_photos.py  7cc19912eac3_conversations_users_remove_status.py  8b5e344dda78_parent_to_messages.py  9b5861d48621_fix_photos_avatar.py  9d0be1c3bebd_messages_documents_update.py  a4d87c16fe19_users_email_nullable.py  a7f3fde01925_users_first_name_and_last_name_not_null.py  a899bee1ad92_add_avatar_to_user.py  ac7751f784a3_added_conversations_users.py  (+14 more)
app/db/types/: date_time.py
app/dto/: documents.py
app/exceptions/: binding.py  cors.py
app/exceptions/db/: exceptions.py  handlers.py  models.py
app/exceptions/routes/: handlers.py  models.py
app/i18n/: exceptions.py  tr.py
app/services/: utils.py
app/services/ipwhois/: client.py  dependencies.py  models.py
app/services/smsaero/: dependencies.py
app/swagger/: html.py  render.py
app/utils/: decorators.py  u_agents.py
app/utils/logging/: helper.py  json_logger.py  middlewares.py  schemas.py
app/v1/: binding.py
app/v1/docs/: hanlders.py
app/v1/schemas/: base.py  phone.py  responses.py
app/v1/security/: auth.py  context.py  dependencies.py  forms.py  handlers.py  http_base.py  repo.py  schemas.py  services.py
app/v1/statuses/: enums.py  schemas.py
app/v1/users/: dependencies.py  handlers.py  repo.py  schemas.py  services.py
(+15 files in other folders)
