[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["dotX12 <dev@shitposting.team>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.1"
SQLAlchemy = "^1.4.42"
pydantic = {extras = ["email"], version = "^1.10.2"}
asyncpg = "^0.26.0"
uvicorn = "^0.18.3"
alembic = "^1.8.1"
python-jose = "^3.3.0"
passlib = "^1.7.4"
bcrypt = "^4.0.1"
python-multipart = "^0.0.5"
python-dotenv = "^0.21.0"
aiohttp = "^3.8.3"
psycopg2-binary = "^2.9.4"
uuid7 = "^0.1.0"
sqlalchemy2-stubs = "^0.0.2-alpha.29"
opencensus = "^0.9.0"
pydantic-i18n = "^0.2.3"
Babel = "^2.10.3"
asynclog = "^0.1.7"
starlette-exporter = "^0.12.0"
pyfa-converter = "^1.0.2.1"
phonenumbers = "^8.12.57"
user-agents = "^2.2.0"

#smsaero = {git = "https://github.com/dotX12/smsaero.git", rev = "master"}
cashews = "^4.7.1"
redis = "^4.3.4"
python-socketio = "^5.7.2"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79